Update CORS and security configuration in WebConfig
Refactor CORS configuration and security setup in WebConfig.